--- a/4.Deployments/pods.yaml
+++ b/4.Deployments/pods.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: webapp
 spec:
-  # minReadySeconds: 30
+  minReadySeconds: 30
   selector:
     matchLabels:
       app: webapp
