--- a/4.Deployments/webapp-rollingUpdate.yaml
+++ b/4.Deployments/webapp-rollingUpdate.yaml
@@ -20,8 +20,8 @@ spec:
     spec:
       containers:
       - name: webapp
-        image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
-        # image: richardchesterwood/k8s-fleetman-webapp-angular:release0
+        # image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
+        image: richardchesterwood/k8s-fleetman-webapp-angular:release0
 
 ---
 apiVersion: v1
